--- a/views/index.ejs
+++ b/views/index.ejs
@@ -2,10 +2,10 @@
         <div class="container">
             <header class="jumbotron">
                 <div class="container">
-                    <h1>Welcome to YelpCamp!</h1>
-                    <p>I don't really know what it is though.. :)</p>
-                    <br>
-                    <p><a class="btn btn-primary btn-large" href="#"> add new campground</a></p>
+                    <h1 class="title"><strong>CinemaScope</strong></h1>
+                    <p>Where you can peek at tons of movies</p>
+                    <p>Our database is growing as time is ticking...</p>
+                    <p>Tick...! Tick...! Tick...!</p>
                 </div>
             </header>
         </div>
