--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -21,9 +21,22 @@
             </div>
             <div id="navbar" class="collapse navbar-collapse">
                 <ul class="nav navbar-nav nav-pills nav-left" style="padding-top: 10px;">
-                    <li><a href="/newrelease"><span class="glyphicon glyphicon-film"></span> New Release<span class="sr-only">(current)</span></a></li>
-                    <li><a href="/topboxoffice"><span class="glyphicon glyphicon-fire"></span> Top 20 Box Office</a></li>
-                    <li><a href="/topfavourite"><span class="glyphicon glyphicon-star"></span> Top 20 Favourite</a></li>
+                    <% if(active==1) { %>
+                        <li class="active"><a href="/newrelease"><span class="glyphicon glyphicon-film"></span> New Release<span class="sr-only">(current)</span></a></li>
+                    <% }else{ %>
+                        <li><a href="/newrelease"><span class="glyphicon glyphicon-film"></span> New Release<span class="sr-only">(current)</span></a></li>
+                    <% } %>
+
+                    <% if(active==2) { %>
+                        <li class="active"><a href="/topboxoffice"><span class="glyphicon glyphicon-fire"></span> Top 20 Box Office</a></li>
+                    <% }else{ %>
+                        <li><a href="/topboxoffice"><span class="glyphicon glyphicon-fire"></span> Top 20 Box Office</a></li>
+                    <% } %>
+                    <% if(active==3) { %>
+                        <li class="active"><a href="/topfavourite"><span class="glyphicon glyphicon-star"></span> Top 20 Favourite</a></li>
+                    <% }else{ %>
+                        <li><a href="/topfavourite"><span class="glyphicon glyphicon-star"></span> Top 20 Favourite</a></li>
+                    <% } %>
                 </ul>
             </div>
         </div>
