--- a/views/movie.ejs
+++ b/views/movie.ejs
@@ -58,7 +58,7 @@
                             <td>
                                 <div class="row">
                                     <div class="col-md-7 col-sm-7 col-xs-7">
-                                        <label class="label-primary lbl-user"><%= c.user.name %></label>
+                                        <label class="label-primary lbl-user"><%= c.user.firstname %></label>
                                     </div>
                                     <div class="col-md-5 col-sm-5 col-xs-5">
                                         <label class="label-warning pull-right lbl-date"><%= moment(c.date).format( 'MM-DD-YYYY HH:mm:SS') %></label>
