--- a/views/register.ejs
+++ b/views/register.ejs
@@ -1,6 +1,10 @@
 <% include partials/header.ejs %>
     <div class="login-form">
-        <form action="/member/login" class="form-group" method="POST">
+        <form action="/member/register" class="form-group" method="POST">
+            <input type="text" class="form-control login-input" name="firstname" placeholder="First Name">
+            <input type="text" class="form-control login-input" name="lasttname" placeholder="Last Name">
+            <input type="text" class="form-control login-input" name="email" placeholder="Email Address">
+            
             <div class="input-group input-group-md login-input">
                 <span class="input-group-addon">
                     <span class="glyphicon glyphicon-user"></span>
@@ -14,9 +18,16 @@
                 </span>
                 <input type="password" class="form-control" name="password" placeholder="Password">
             </div>
+
+            <div class="input-group input-group-md login-input">
+                <span class="input-group-addon">
+                    <span class="glyphicon glyphicon-lock"></span>
+                </span>
+                <input type="password" class="form-control" name="password2" placeholder="Confirm Password">
+            </div>
             
             <button class="btn btn-success btn-block" type="submit" name="submit">Submit</button>
         </form>
-        <a href="/member/register"><button class="btn btn-primary btn-block" name="register">Or Sign Up for FREE Membership</button></a>
+        <a href="/member/login"><button class="btn btn-primary btn-block" name="register">Or Sign In if you are already a Member</button></a>
     </div>
 <% include partials/footer.ejs %>
