--- a/backup/views/register.ejs
+++ b/backup/views/register.ejs
@@ -1,16 +1,10 @@
 <% include partials/header.ejs %>
     <div class="login-form">
-        <form action="/member/register" id="form-input" class="form-group" method="POST">
+        <form action="/member/register" class="form-group" method="POST">
             <input type="text" class="form-control login-input" name="firstname" placeholder="First Name">
-            <input type="text" class="form-control login-input" name="lastname" placeholder="Last Name">
+            <input type="text" class="form-control login-input" name="lasttname" placeholder="Last Name">
+            <input type="text" class="form-control login-input" name="email" placeholder="Email Address">
             
-            <div class="input-group input-group-md login-input">
-                <span class="input-group-addon">
-                    <span class="glyphicon glyphicon-envelope"></span>
-                </span>
-                <input type="text" class="form-control" name="email" placeholder="Email Address">
-            </div>
-
             <div class="input-group input-group-md login-input">
                 <span class="input-group-addon">
                     <span class="glyphicon glyphicon-user"></span>
@@ -32,7 +26,7 @@
                 <input type="password" class="form-control" name="password2" placeholder="Confirm Password">
             </div>
             
-            <input class="btn btn-success btn-block" data-loading-text="Memproses Data..." type="submit" name="submit">
+            <button class="btn btn-success btn-block" type="submit" name="submit">Submit</button>
         </form>
         <a href="/member/login"><button class="btn btn-primary btn-block" name="register">Or Sign In if you are already a Member</button></a>
     </div>
