--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -3,7 +3,17 @@
         <script
             src="https://code.jquery.com/jquery-2.2.4.min.js"
             integrity="sha256-BbhdlvQf/xTY9gja0Dq3HiwQF8LaCRTXxZKRutelT44="
-            crossorigin="anonymous"></script>
+            crossorigin="anonymous">
+        </script>
         <script type="text/javascript" src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+        <script type="text/javascript">
+            $(function(){
+                $('.btn-success').on('click', function() {
+                    var $this = $(this);
+                    $this.button('loading');
+                    // document.getElementById("form-input").submit();
+                });
+            });
+        </script>
     </body>
 </html>
