--- a/views/login.ejs
+++ b/views/login.ejs
@@ -15,7 +15,7 @@
                 <input type="password" class="form-control" name="password" placeholder="Password">
             </div>
             
-            <button class="btn btn-success btn-block" data-loading-text="memvalidasi Akses..." type="submit" name="submit">Login</button>
+            <button class="btn btn-success btn-block" data-loading-text="Memvalidasi Akses..." type="submit" name="submit">Login</button>
         </form>
         <a href="/member/register"><button class="btn btn-danger btn-block" name="register">Or Sign Up for FREE Membership</button></a>
     </div>
