--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -74,8 +74,7 @@
     </nav>
 
     <div class="row row-body">
-        <!--<p style="color: white;">Session : <%= JSON.stringify(session) %></p>
-        <p style="color: white;">Session : <%= session.flash.length %></p>-->
+        <!--<p style="color: white;">Session : <%= JSON.stringify(session) %></p>-->
         
         <% session.flash.forEach(function(msgs) { %>
             <!--<p style="color: white;">Tipe Session : <%= msgs['type'] %></p>-->
